RESOLVED FIXED212136
REGRESSION(r261554): [GTK] Version 2.29.1 crashes using drag-n-drop API
https://bugs.webkit.org/show_bug.cgi?id=212136
Summary REGRESSION(r261554): [GTK] Version 2.29.1 crashes using drag-n-drop API
Guilaume Ayoub
Reported 2020-05-20 07:26:22 PDT
When using the drag-n-drop API, Epiphany with WebKitGTK 2.29.1 crashes. Previous versions of WebKitGTK were working. Example: https://jsbin.com/hiqasek/edit?html,js,output - Epiphany 3.37.1 - WebKitGTK 2.29.1
Attachments
Patch (1.37 KB, patch)
2020-05-20 08:24 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-05-20 08:22:58 PDT
Right, I forgot to handle selection data in Pasteboard::read taking a PasteboardFileReader.
Carlos Garcia Campos
Comment 2 2020-05-20 08:24:50 PDT
Carlos Garcia Campos
Comment 3 2020-05-20 09:00:06 PDT
Guilaume Ayoub
Comment 4 2020-05-20 16:04:46 PDT
That was really, really fast. Thank you ♥, the patch works perfectly!
Note You need to log in before you can comment on or make changes to this bug.