REGRESSION(r261554): [GTK] Version 2.29.1 crashes using drag-n-drop API https://bugs.webkit.org/show_bug.cgi?id=212136

Reviewed by Adrian Perez de Castro.

* platform/gtk/PasteboardGtk.cpp:
(WebCore::Pasteboard::read): Use m_selectionData if present.

Canonical link: https://commits.webkit.org/225009@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261923 268f45cc-cd09-0410-ab3c-d52691b4dbfc